<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_grupOlustur"
            android:title="@string/menu_grupOlustur" />
        <item
            android:id="@+id/nav_grubaUyeEkle"
            android:title="@string/menu_grubaUyeEkle" />
        <item
            android:id="@+id/nav_mesajOlustur"
            android:title="@string/menu_mesajOlustur" />
        <item
            android:id="@+id/nav_mesajGonder"
            android:title="@string/menu_mesajGonder" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>